--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "components"
   ],
   "license": "MIT",
+  "peerDependencies": {
+    "react": "^16.4.0",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
@@ -28,8 +33,6 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "prop-types": "latest",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
     "react-intersection-observer": "^8.26.1"
   }
 }
