--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Marcin Krawczyk",
   "version": "0.0.6",
   "main": "dist/build.js",
-  "source": "src/index.js",
+  "source": "src/withFade.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production"
